; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-error/test/extr_exception.c_run_rescue.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-error/test/extr_exception.c_run_rescue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"oo\00", align 1
@protect_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @run_rescue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_rescue(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @mrb_get_args(i32* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %5, i32* %6)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @protect_cb, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @protect_cb, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @mrb_rescue(i32* %9, i32 %10, i32 %11, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*, i32*) #1

declare dso_local i32 @mrb_rescue(i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
